Fixed alignment of remove icon for an item-set inside an option-set (#1520)
(cherry picked from commit d9eeb753749aca3eec4a40c7ebebb2ba08426d59)

--- a/src/main/resources/assets/admin/common/styles/api/form/set/form-set-view.less
+++ b/src/main/resources/assets/admin/common/styles/api/form/set/form-set-view.less
@@ -32,7 +32,7 @@
         box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.2);
 
         &.collapsed {
-          .form-occurrence-draggable-label {
+          > .form-occurrence-draggable-label {
             cursor: zoom-in;
           }
         }
@@ -88,10 +88,6 @@
             p.note {
               display: block;
               font-size: 10px;
-            }
-
-            + .remove-button {
-              margin-top: 10px;
             }
           }
         }
