--- a/src/main/resources/assets/admin/common/styles/api/form/set/optionset/form-option-set-view.less
+++ b/src/main/resources/assets/admin/common/styles/api/form/set/optionset/form-option-set-view.less
@@ -52,7 +52,7 @@
       padding-bottom: 0;
     }
 
-    .form-occurrence-draggable-label {
+    > .form-occurrence-draggable-label {
       margin-left: 0;
       width: 100%;
     }
